--- a/public/index.html
+++ b/public/index.html
@@ -132,12 +132,12 @@
 
     <!-- Styles-->
     <title>
-     Body Shop
+     The Body Shop
     </title>
 
     <link
       rel="shortcut icon"
-      href="/apex/wsnyprd/r/2019/files/static/v2930/nayomi-favicon.png"
+      href="https://www.thebodyshop.com/_ui/responsive/theme-tbs/assets/img/favicon.ico"
     />
 
     <script
